# python-linear-algebra-toolbox

./: .editorconfig  .gitconfig  .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: benchmark.py
src/linalgtoolbox/: basis.py  preconditioner.py  preconditioners.py  product.py  random.py  sparse.py  special.py
tests/: test_basis.py  test_random.py  test_sparse.py
